fix: apply Guardian compliance fixes (16 issues addressed)